--- a/style.css
+++ b/style.css
@@ -1,1 +1,205 @@
+body, .head{
+    top: 0;
+    margin: 0;
+    padding: 0;
+    font-family:"Poppins", sans-serif;;
+}
 
+
+.head {
+    display: flex;
+    align-items: center;
+    justify-content: space-between; 
+}
+
+
+.tx1{
+    position: absolute;
+    left: 50px;
+    font-size: 20px;
+    color: #606060;
+}
+
+
+.img1 {
+    margin: 0 auto;
+    height: 50px;
+    padding-left: 300px;
+    padding-top: 30px;
+}
+
+
+.user,
+.pin,
+.arrow {
+    margin-right: 10px;
+    border-radius: 25px;
+    text-align: center;
+    font-size: 20px;
+    width: 100px;
+    height: 33px;
+    border: none;
+    cursor: pointer;
+    outline: none;
+    background-color: #fff;
+    border: none;
+}
+
+
+.main{
+    display: flex;
+    justify-content: space-around;
+    padding-top: 1.5rem;
+}
+
+
+.inter1{
+    margin-top: 2.5rem;
+    line-height: 0.1rem;
+}
+
+
+.tx2{
+    font-size: 25px;
+}
+
+
+.inter2{
+    font-size: 50px;
+    padding-left: 20rem;
+}
+
+
+.date_time1{
+    color: #888;
+}
+
+
+.main1{
+    position: absolute;
+    top: 200px;
+    left: 63%;
+}
+.tb1, .tb2, .tb3{
+    background-color: black;
+    width: 400px;
+    height: 133px;
+    margin-top: 10px;
+    border-radius: 25px;
+}
+
+
+.tb1{
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    margin-top: 30px;
+    background: linear-gradient(270deg,rgba(255,178,102),rgba(255,153,51),rgba(255,128,0));
+}
+
+
+.tb2{
+    background: linear-gradient(270deg,rgba(102,204,0),rgba(0,204,0),rgba(0,204,102));
+}
+
+
+.tb3{
+    background: linear-gradient(270deg,rgba(255,102,102),rgba(255,51,51),rgba(255,0,0));
+}
+
+
+.typing {
+    text-align: center;
+    margin-top: 1px;
+    margin-left: 30px;
+    background-color: #FFCC99;
+    border-radius: 5px;
+    width: 150px;
+    height: 30px;
+    outline: none;
+    border: none;
+}
+
+
+.special{
+    font-weight: bold;
+    margin-left: 95px;
+}
+
+
+.transfer{
+    margin-left: 60px;
+}
+
+
+.amt{
+    margin-left: 125px;
+}
+
+
+.money{
+    font-weight: bold;
+    padding-top: 20px;
+    margin-left: 30px;
+}
+
+
+.loan{
+    width: 200px;
+    background-color: #66FF66;
+}
+
+
+.users, .pins{
+    background-color: #FF6666;
+}
+
+
+.last{
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
+    top: 93%;
+    left: 12.5%;
+}
+
+
+.sorting{
+    position: absolute;
+    top: 5px;
+    left: 690px;
+}
+@media screen and (max-width: 798px) {
+    .amt1{
+        font-size: 45px;
+    }
+    .typing{
+        margin-top: 5px;
+    }
+    .tb1, .tb2, .tb3{
+        width: 280px;
+    }
+    .transfer, .amt{
+        position: absolute;
+        top: 93px;
+        left: 130px;
+    }
+    .amt{
+        top: 130px;
+        left: 70px;
+    }
+    .useres{
+        top:390px;
+        left: 125px;
+    }
+    .pinss{
+        top:430px;
+    }
+    .last{
+        position: absolute;
+        left: 1%;
+    }
+    .sorting{
+        position: absolute;
+        left: 420px;
+    }
+}
