--- a/style.css
+++ b/style.css
@@ -234,6 +234,7 @@ body, .head{
 
 .row-3, .row3 {
     margin-left: auto;
+    margin-right: 10px;
     padding-left: 10px; 
 }
 
@@ -272,6 +273,20 @@ body, .head{
     width: 30px;
     border-radius: 20px;
     margin-left: 10px;
+}
+
+
+/* .container{
+    opacity: 0;
+} */
+
+
+.row-1 {
+    background-image: linear-gradient(to top left, #39b385, #9be15d);
+}
+
+.row {
+    background-image: linear-gradient(to top left, #e52a5a, #ff585f);
 }
 
 
