--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body, .head{
 
 .tx1{
     position: absolute;
-    left: 50px;
+    margin-left: 50px;
     font-size: 20px;
     color: #606060;
 }
@@ -54,6 +54,9 @@ body, .head{
 
 
 .inter1{
+    position: absolute;
+    margin-left: auto;
+    margin-right: 1000px;
     margin-top: 2.5rem;
     line-height: 0.1rem;
 }
@@ -66,7 +69,7 @@ body, .head{
 
 .inter2{
     font-size: 50px;
-    padding-left: 20rem;
+    padding-left: 75%;
 }
 
 
@@ -291,6 +294,10 @@ body, .head{
 
 
 @media screen and (max-width: 768px) {
+    .inter1{
+        margin-left: auto;
+        margin-right: 550px;
+    }
     .amt1{
         font-size: 45px;
     }
@@ -303,18 +310,18 @@ body, .head{
     .transfer, .amt{
         position: absolute;
         top: 93px;
-        left: 130px;
+        left: 129px;
     }
     .amt{
-        top: 130px;
-        left: 70px;
+        top: 135px;
+        left: 65px;
     }
     .useres{
-        top:390px;
+        top:405px;
         left: 125px;
     }
     .pinss{
-        top:430px;
+        top:450px;
     }
     .last{
         position: absolute;
